<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >


    <TextView
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/head"
        android:textSize="35sp"
        android:layout_marginBottom="20dp"
        />

    <TextView
        android:id="@+id/city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city"
        android:textSize="25dp"
        android:layout_margin="10dp"
        />

    <TextView
        android:id="@+id/weather_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weather_type"
        android:textSize="25dp"
        android:layout_margin="10dp"
        />

    <TextView
    android:id="@+id/temperature"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/temperature"
    android:textSize="25dp"
    android:layout_margin="10dp"
     />

    <TextView
        android:id="@+id/wind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wind"
        android:textSize="25dp"
        android:layout_margin="10dp"
         />

    <TextView
        android:id="@+id/humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/humidity"
        android:textSize="25dp"
        android:layout_margin="10dp"
         />



</LinearLayout>